[package]
name = "simplide"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ropey = "1.6"
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"

# Language parsers
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.6"
tree-sitter-yaml = "0.7"
tree-sitter-md = "0.3"
tree-sitter-php = "0.23"

# Config
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
